Use true colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ setw -g mode-keys vi
 set -g base-index 1
 setw -g pane-base-index 1
 
+set -sa terminal-features ",xterm-256color:RGB"
+
 # This tmux statusbar config was created by tmuxline.vim
 
 set -g status-justify "left"
